--- a/docassemble/USCISApplications/data/questions/combined_application_questions.yml
+++ b/docassemble/USCISApplications/data/questions/combined_application_questions.yml
@@ -1982,7 +1982,7 @@ objects:
   - users[i].i_765_attachment: ALDocument.using(title="I-765", filename="I-765", has_addendum=False )
 ---
 code: |
-  users[i].i_821_attachment.enabled = users[i].application_is_approved and application_kind == "ead_and_tps"
+  users[i].i_821_attachment.enabled = users[i].application_is_approved and application_kind in ['ead_and_tps','tps_only']
 ---
 code: |
   users[i].i_765_attachment.enabled = users[i].application_is_approved and application_kind in ['ead_and_tps','ead_only']
@@ -1991,13 +1991,13 @@ objects:
   - users[i].tps_yes_answer_addendum: ALDocument.using(title="TPS Yes Answer Addendum", filename="TPS Yes Answer Addendum", has_addendum=False )
 ---
 code: |
-  users[i].tps_yes_answer_addendum.enabled = application_kind in ['ead_and_tps','ead_only'] and users[i].application_is_approved and application_kind == "ead_and_tps" and any([users[i].q8a, users[i].q8b, users[i].q8c, users[i].q9a, users[i].q9b, users[i].q9c, users[i].q10a, users[i].q10b, users[i].q10c, users[i].q11, users[i].q12a, users[i].q12b, users[i].q12c, users[i].q12d, users[i].q12e, users[i].q13a, users[i].q13b, users[i].q13c, users[i].q13d, users[i].q14a, users[i].q14b, users[i].q14c, users[i].q14d, users[i].q15a, users[i].q15b, users[i].q15c, users[i].q16, users[i].q17, users[i].q18a, users[i].q18b, users[i].q18c, users[i].q19, users[i].q20a, users[i].q20b, users[i].q20c, users[i].q20d, users[i].q20e, users[i].q21, users[i].q22, users[i].q23a, users[i].q23b, users[i].q23c, users[i].q24, users[i].q25, users[i].q26, users[i].q27, users[i].q28, users[i].q29, users[i].q30a, users[i].q30b, users[i].q30c, users[i].q30d, users[i].q30e, users[i].q31a, users[i].q31b, users[i].q32, users[i].q33, users[i].q34, users[i].q35, users[i].q36, users[i].q37a, users[i].q37b, users[i].q38a, users[i].q38b, users[i].q38c, users[i].q38d, users[i].q38e, users[i].q39a, users[i].q39b, users[i].q40, users[i].q41])
+  users[i].tps_yes_answer_addendum.enabled = application_kind in ['ead_and_tps','tps_only','ead_only'] and users[i].application_is_approved and application_kind == "ead_and_tps" and any([users[i].q8a, users[i].q8b, users[i].q8c, users[i].q9a, users[i].q9b, users[i].q9c, users[i].q10a, users[i].q10b, users[i].q10c, users[i].q11, users[i].q12a, users[i].q12b, users[i].q12c, users[i].q12d, users[i].q12e, users[i].q13a, users[i].q13b, users[i].q13c, users[i].q13d, users[i].q14a, users[i].q14b, users[i].q14c, users[i].q14d, users[i].q15a, users[i].q15b, users[i].q15c, users[i].q16, users[i].q17, users[i].q18a, users[i].q18b, users[i].q18c, users[i].q19, users[i].q20a, users[i].q20b, users[i].q20c, users[i].q20d, users[i].q20e, users[i].q21, users[i].q22, users[i].q23a, users[i].q23b, users[i].q23c, users[i].q24, users[i].q25, users[i].q26, users[i].q27, users[i].q28, users[i].q29, users[i].q30a, users[i].q30b, users[i].q30c, users[i].q30d, users[i].q30e, users[i].q31a, users[i].q31b, users[i].q32, users[i].q33, users[i].q34, users[i].q35, users[i].q36, users[i].q37a, users[i].q37b, users[i].q38a, users[i].q38b, users[i].q38c, users[i].q38d, users[i].q38e, users[i].q39a, users[i].q39b, users[i].q40, users[i].q41])
 ---
 objects:
   - users[i].i_912_fee_waiver: ALDocument.using(title=f"{users[i]} - Request for Fee Waiver", filename=space_to_underscore(f"{users[i]} - Request for Fee Waiver"), has_addendum=False)
 ---
 code: |
-  users[i].i_912_fee_waiver.enabled = application_kind in ['ead_and_tps','ead_only'] and users[i].application_is_approved and users[i].fee_waiver_needed
+  users[i].i_912_fee_waiver.enabled = application_kind in ['ead_and_tps','tps_only','ead_only'] and users[i].application_is_approved and users[i].fee_waiver_needed
 ---
 attachment:
   name: TPS_yes_answer_addendum
@@ -2011,7 +2011,7 @@ attachment:
   filename: I-821
   variable name: users[i].i_821_attachment[j]
   skip undefined: True
-  pdf template file: I-821_flattened_MN.pdf
+  pdf template file: I-821_updated_050525.pdf
   editable: False
   fields:
     # - "is_form_g28_attached": ${ users[i].is_form_g28_attached }
@@ -2586,7 +2586,7 @@ attachment:
   filename: I-765
   variable name: users[i].i_765_attachment[j]
   skip undefined: True
-  pdf template file: i-765_flattened_MN_updated_082824.pdf
+  pdf template file: I-765_updated_050525.pdf
   editable: False
   fields:
     # - "US Citizenship and Immigration Services": ${ US_Citizenship_and_Immigration_Services }
